fix on ie 11

--- a/app/views/styles/theme-oc/theme-ie.scss
+++ b/app/views/styles/theme-oc/theme-ie.scss
@@ -1,7 +1,19 @@
 .main .paper {
 	display: table;
+	width: 100%;
+}
+
+.form-header > .branding > .logo-wrapper > img {
+	border-width: 0px;
 }
 
 .form-footer > .form-footer__content > .form-footer__content__main-controls {
 	flex: none;
+}
+
+@media screen and (min-width: 720px) {
+  	.form-footer .enketo-power {
+    	bottom: auto;
+    	padding-bottom: 25px;
+	}
 }
